unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Score_Sic_Code__c.field-meta.xml
<CustomField>
    <fullName>Score_Sic_Code__c</fullName>
    <label>Score: Sic Code</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>