unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Scored_Probability_Good__c.field-meta.xml
<CustomField>
    <fullName>Scored_Probability_Good__c</fullName>
    <label>Scored Probability Good</label>
    <precision>18</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>