unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Secondary_Model_Daily_Sales__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Model_Daily_Sales__c</fullName>
    <label>Secondary Model Daily Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>