unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Secondary_Model_Decision__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Model_Decision__c</fullName>
    <label>Secondary Model Decision</label>
    <type>TextArea</type>
</CustomField>