unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Secondary_Model_Run_Errors__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Model_Run_Errors__c</fullName>
    <label>Secondary Model Run Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>