unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Secondary_Model_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Model_Run_Status__c</fullName>
    <label>Secondary Model Run Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>