unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Secondary_Term_Max_Model__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Term_Max_Model__c</fullName>
    <label>Secondary Term Max Model</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>