unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Secondary_WC_Credit_Decision_Model_Vers__c.field-meta.xml
<CustomField>
    <fullName>Secondary_WC_Credit_Decision_Model_Vers__c</fullName>
    <label>Secondary WC Credit Decision Model Vers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>