unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Secondary_YHat_Id__c.field-meta.xml
<CustomField>
    <fullName>Secondary_YHat_Id__c</fullName>
    <description>External Id</description>
    <inlineHelpText>External Id</inlineHelpText>
    <label>Secondary YHat Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>