unpackaged/main/default/objects/WC_Credit_Decision__c/fields/SIC_Decision__c.field-meta.xml
<CustomField>
    <fullName>SIC_Decision__c</fullName>
    <description>Auto Decline or Pass based on SIC</description>
    <label>SIC Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>