unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Stdev_Monthly_Avg_Daily_Bal__c.field-meta.xml
<CustomField>
    <fullName>Stdev_Monthly_Avg_Daily_Bal__c</fullName>
    <label>Stdev Monthly Avg Daily Bal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>