unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Term_Max_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Term_Max_Checklist__c</fullName>
    <label>Term Max Checklist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>