unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Time_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Business__c</fullName>
    <label>Time in Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>