unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Time_In_Business_Decision__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Business_Decision__c</fullName>
    <label>Time In Business Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>