unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Top_And_Bottom_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Top_And_Bottom_Calculated__c</fullName>
    <label>Top And Bottom Calculated</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>