unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Total_Repay_Max_Gold__c.field-meta.xml
<CustomField>
    <fullName>Total_Repay_Max_Gold__c</fullName>
    <label>Total Repay Max Gold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>