unpackaged/main/default/objects/WC_Credit_Decision__c/fields/UAT_Admin_Notes__c.field-meta.xml
<CustomField>
    <fullName>UAT_Admin_Notes__c</fullName>
    <label>UAT Admin Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>