unpackaged/main/default/objects/WC_Credit_Decision__c/fields/WC_CDR_Gold_Approval_Amt__c.field-meta.xml
<CustomField>
    <fullName>WC_CDR_Gold_Approval_Amt__c</fullName>
    <label>WC CDR Gold Approval Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>