unpackaged/main/default/objects/WC_Credit_Decision__c/fields/WC_Credit_Decision_Diamond_Term__c.field-meta.xml
<CustomField>
    <fullName>WC_Credit_Decision_Diamond_Term__c</fullName>
    <label>WC Credit Decision Diamond Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>