unpackaged/main/default/objects/WC_Credit_Decision__c/fields/WC_Credit_Decision_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>WC_Credit_Decision_Model_Version__c</fullName>
    <defaultValue>'Delmar'</defaultValue>
    <label>WC Credit Decision Model Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>