unpackaged/main/default/objects/WC_Credit_Decision__c/fields/WC_Credit_Decision_Term__c.field-meta.xml
<CustomField>
    <fullName>WC_Credit_Decision_Term__c</fullName>
    <description>2015.0211 - Field will be blank until logic created.</description>
    <label>WC Credit Decision Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>