unpackaged/main/default/objects/WC_Credit_Decision__c/fields/WC_Credit_Decision_Value__c.field-meta.xml
<CustomField>
    <fullName>WC_Credit_Decision_Value__c</fullName>
    <label>WC Credit Decision Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>