unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Weekly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payments__c</fullName>
    <description>This displays the credit review decision recommendations panel to show true/false vals as text</description>
    <formula>IF( Weekly_Payments_Approved__c = TRUE, 'Approvable', 'N/A')</formula>
    <label>Weekly Payments Formula</label>
    <type>Text</type>
</CustomField>