unpackaged/main/default/objects/WC_Credit_Decision__c/fields/YHat_Id__c.field-meta.xml
<CustomField>
    <fullName>YHat_Id__c</fullName>
    <externalId>true</externalId>
    <label>YHat Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>