unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Yrs_Since_BK__c.field-meta.xml
<CustomField>
    <fullName>Yrs_Since_BK__c</fullName>
    <label>Yrs Since BK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>