unpackaged/main/default/objects/WC_Credit_Decision__c/fields/Yrs_Since_BK_Component__c.field-meta.xml
<CustomField>
    <fullName>Yrs_Since_BK_Component__c</fullName>
    <label>Yrs Since BK Component</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>